--- a/web/developers.html
+++ b/web/developers.html
@@ -159,7 +159,7 @@ body {
     <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="./blob/master/assets/Sanket.png">
+          <img class="img-fluid" href="https://github.com/PIYSocial-India/CSE-B/blob/master/assets/Sanket.png">
         </div>
         <div class="team-content">
           <h3 class="name">Sanket Pattanaik</h3>
@@ -175,7 +175,7 @@ body {
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="our-team">
         <div class="picture">
-          <img class="img-fluid" src="./assets/Saswat.png">
+          <img class="img-fluid" href="https://github.com/PIYSocial-India/CSE-B/blob/master/assets/Saswat.png">
         </div>
         <div class="team-content">
           <h3 class="name">Saswat Samal</h3>
