--- a/web/assignment/questionassignment.html
+++ b/web/assignment/questionassignment.html
@@ -180,7 +180,11 @@
                     <h1>CSW Strings Assignment :</h1>
                     <p>
                         <a href="https://drive.google.com/file/d/1AQNn5-h2BRfAz2I7M7-I6BD2AMGGdHgj/view?usp=sharing">Open.</a>
-
+                    
+                    <h1>ESDM Assignment-1 :</h1>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1dgiLDkWjzx2uUH-5-yI02Dgyqa4-zmPt/view?usp=sharing">Open.</a>
+                    </p>
                         <br />
                         <br />
                         <br />
