--- a/web/assignment/assignmentsolutions.html
+++ b/web/assignment/assignmentsolutions.html
@@ -176,11 +176,10 @@ ol {
     </div>
     <div class="window-main">
         <ol>
-            <h1> ASSIGNMENT SOLUTIONS </h1>
-    <br>   <br>
-  <br>
-  <br>
-            <h1>NO ASSIGNMENTS ASSIGNED YET !!!</h1>
+            <h1>ESDM Assignment-1 :</h1>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1jI6DlfKdlLbwZO-EVcQrZlVp6VgZueCF/view?usp=sharing">Open.</a>
+                    </p>
 
    <br>
   <br>
@@ -189,7 +188,7 @@ ol {
   <br>  
   <br>
   <br>
-            <h5>Last Updated On: 24/10/2020  11:00PM</h25
+          <h5>Last Updated On: 12/11/2020  7:10 PM</h5>
 
         </ol>
     </div>
