--- a/web/assignment/questionassignment.html
+++ b/web/assignment/questionassignment.html
@@ -195,7 +195,7 @@
                         <br />
                     </p>
 
-                    <h5>Last Updated On: 03/11/2020 10:55 AM</h5>
+                    <h5>Last Updated On: 12/11/2020 7:15 PM</h5>
                 </ol>
             </div>
         </section>
