--- a/web/assignment/assignmentsolutions.html
+++ b/web/assignment/assignmentsolutions.html
@@ -172,7 +172,7 @@
             </div>
             <div class="window-main">
                 <ol>
-                    <h1>ASSIGNMENTS QUESTIONS</h1>
+                    <h1>ASSIGNMENTS SOLUTIONS</h1>
                     <br />
                     <br />
                     <br />
