New Classroom Assignment Added

--- a/web/announcements/classannouncements.html
+++ b/web/announcements/classannouncements.html
@@ -192,11 +192,9 @@ body {
           <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 slideCol">
             <div class="scroller">
               <div class="inner">
-                <p>No Announcemnts till now!</p>
-                <p>All info about class</p>
-                <p>will be updated here...</p>
-                <p>Stay Tuned!</p>
-                <p>Stay Tuned!</p>
+                <p>Notes Updated.</p>
+                <p>Complete DL Lab Assignment 2.</p>
+                <p>Complete ESDM Assignment by 17/11/2020.</p>
               </div>
             </div>
           </div>
