--- a/web/announcements/classannouncements.html
+++ b/web/announcements/classannouncements.html
@@ -209,7 +209,7 @@ body {
     </script>
 
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4 iamCol">
-            <p>Updated On: 27/10/2020 | 1:30AM</p>
+            <p>Updated On: 15/11/2020 | 7:39PM</p>
           </div>
 
 </body>
