--- a/web/announcements/classannouncements.html
+++ b/web/announcements/classannouncements.html
@@ -193,8 +193,10 @@ body {
             <div class="scroller">
               <div class="inner">
                 <p>Notes Updated.</p>
-                <p>Complete DL Lab Assignment 2.</p>
-                <p>Complete ESDM Assignment by 17/11/2020.</p>
+                <p>Complete</p>
+                <p>DLLab Assignment 2.</p>
+                <p>Complete</p>
+                <p>ESDM Assignment</p>
               </div>
             </div>
           </div>
